lldpd (0.7.4)
  * Fixes:
    + Segfault in lldpcli.
    + Memory leak in liblldpctl when using a custom log handler.
    + Fix some unaligned memory accesses.
  * Features:
    + Allow to configure hold value from lldpcli (and hence the TTL).
    + Allow to configure pattern for valid interfaces from lldpcli.

lldpd (0.7.3)
  * Features:
    + DragonFly BSD support.
    + Solaris support (incomplete).
    + LLDP-MED fast start support (thanks to Roopa Prabhu).
    + Provide global statistics through "show statistics summary"
      command (thanks to Roopa Prabhu).
  * Fixes:
    + Fix IPv4/IPv6 address discovery in Linux.

lldpd (0.7.2)
  * Features
    + lldpd can be configured through /etc/lldpd.conf and
      /etc/lldpd.d. All commands accepted by lldpcli are accepted.
    + Lock BPF interfaces before handing them to chrooted process on
      BSD.
    + Limit the number of neighbors for each port to 4 (per protocol).
    + Force CDPv2 protocol with argument `-ccc`.
    + Provide port statistics through "show statistics" command
      (thanks to Roopa Prabhu).
  * Fixes:
    + Driver whitelisting is done before checking if an interface has
      a lower interface in Linux.
    + Expire remote ports and chassis in a timely manner.

lldpd (0.7.1)
  * Features
    + Mac OS X support, sponsored by Xcloud, Mac cloud server hosting
      provider. http://xcloud.me/
    + Upstart and systemd support.
    + Remove Unix socket when there is no process listening.

lldpd (0.7.0)
  * Global changes:
    + FreeBSD support.
    + OpenBSD support.
    + NetBSD support.
    + Detect interface changes.
    + CLI for lldpctl: lldpcli.
  * Other features:
    + Allow to disable LLDP protocol (with `-ll`). In this case, the
      first enabled protocol will be used when no neighbor is detected.
    + Allow to filter debug logs using tokens. Add more debug logs.
    + lldpctl can now output JSON.
    + Use netlink to gather interface information on Linux.