@@ -94,9 +94,15 @@ client_handle_set_configuration(struct lldpd *cfg, enum hmsg_type *type,
 	}
 #endif
 	if (config->c_iface_pattern) {
-		log_debug("rpc", "change c_iface_pattern %s", config->c_iface_pattern);
+		log_debug("rpc", "change interface pattern to %s", config->c_iface_pattern);
 		free(cfg->g_config.c_iface_pattern);
 		cfg->g_config.c_iface_pattern = strdup(config->c_iface_pattern);
+		levent_update_now(cfg);
+	}
+	if (config->c_description) {
+		log_debug("rpc", "change system description to %s", config->c_description);
+		free(cfg->g_config.c_description);
+		cfg->g_config.c_description = strdup(config->c_description);
 		levent_update_now(cfg);
 	}
 
